# ExamineAssistant

./: .gitignore  Makefile  README.md  cli.py  main.py  pyproject.toml  requirements.txt
app/core/: __init__.py  audio.py  billing.py  claude.py  config.py  profiles.py  system_audio.py  transcribe.py
app/ui/: audio_settings.py  controller.py  hotkeys.py  macos.py  main_window.py  profile_editor.py  theme.py  worker.py
profiles/: general.yaml  innovation_project.yaml  intercultural_comm.yaml  interview_it.yaml  personal_management.yaml  study.yaml
