[project]
name = "examineassistant"
version = "0.2.0"
description = "Невидимый помощник для созвонов на macOS — слушает разговор и отвечает голосом Claude"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Artyom Klyukovskiy" }]

dependencies = [
    "sounddevice==0.5.1",
    "numpy==2.1.3",
    "soundfile==0.12.1",
    "pynput==1.7.7",
    "openai==1.57.0",
    "anthropic==0.40.0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "PyQt6==6.8.0",
    "pyobjc-framework-Cocoa==12.2 ; sys_platform == 'darwin'",
]

[project.scripts]
examineassistant = "main:main"
examineassistant-cli = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# uv создаёт .venv в корне проекта по умолчанию
package = false
